# api_server/src/interface_adapter/http_api/transaction.py
@@ -6,7 +6,9 @@ from connexion import NoContent
 from src.constants import DEFAULT_LIMIT, DEFAULT_OFFSET
 from src.entity.transaction import Transaction
 from src.exceptions import UserInputError, TransactionNotFoundError
+from src.interface_adapter.http_api.account import _map_account_to_http_response
 from src.interface_adapter.http_api.decorator.with_context import with_context
+from src.interface_adapter.http_api.payment_method import _map_payment_method_to_http_response
 from src.interface_adapter.http_api.util.error import bad_request
 from src.interface_adapter.sql.decorator.auth import auth_regular_admin
 from src.interface_adapter.sql.decorator.sql_session import require_sql
@@ -81,11 +83,11 @@ class TransactionHandler:
 
 def _map_transaction_to_http_response(transaction: Transaction) -> dict:
     fields = {
-        "src": transaction.src,
-        "dst": transaction.dst,
+        "src": _map_account_to_http_response(transaction.src),
+        "dst": _map_account_to_http_response(transaction.dst),
         "timestamp": transaction.timestamp,
         "name": transaction.name,
-        "payment_method": transaction.payment_method.name,
+        "payment_method": _map_payment_method_to_http_response(transaction.payment_method),
         "value": transaction.value,
         "attachments": transaction.attachments
     }
